<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="button_login_text">Login</string>
    <string name="Password">Password</string>
    <string name="login_name">login name</string>
    <string name="dialog_message">Would you like to finish the activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="start_chat">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="title_activity_test_tool_bar">TestToolBar</string>
    <string name="testToolbar">TestToolbar</string>
    <string name="action_one">Choice 1</string>
    <string name="action_two">Choice 2</string>
    <string name="action_three">Choice 3</string>
    <string name="action_about">About</string>
    <string name="tool_dialog_title">Do you want to go back?</string>
    <string name="new_message">New Message</string>
</resources>
